# nilo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  design_discussion.md
.github/workflows/: test.yml
docs/: ai-context.en.md  ai-context.md  backup-and-upgrade.en.md  backup-and-upgrade.md  commands.en.md  commands.md  concept-model.md  db-backup-roadmap.md  design.md  development.en.md  development.md  mcp.en.md  mcp.md  overdrive.en.md  overdrive.md  recipes.en.md  recipes.md  roadmap.en.md  roadmap.md  roadmap_failure_ledger.md  roadmap_phase_2_transition_hardening.md  roadmap_release_0.2.0.md  schema-inventory.md  schema-usage-report.md
docs/concepts/: tsujitsuma.md  tsujitsuma_slide.html
docs/internal/: failure-feedback-loop-design.md  review-execution-design.md  test-infrastructure-plan.md  work-usecase-design.md  write-paths.md
docs/releases/: 0.1.10.md  0.1.9.md  0.2.0.md  0.2.1.md  0.2.2.md  0.3.0.md  0.3.1.md  0.3.2.md  0.4.0.md  0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md  0.5.5.md  0.5.6.md  0.5.7.md  0.5.8.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  0.6.5.md  0.7.0.md  0.7.1.md  0.7.2.md  0.7.3.md  0.7.4.md  0.7.5.md  0.7.6.md  0.7.7.md  0.7.8.md  0.8.0.md
scripts/: schema_usage_report.py
src/nilo/: agent_installation.py  agent_report_import.py  ai_context.py  backup.py  claude_cli_review.py  cli.py  cli_support.py  command_runner.py  completion_projection.py  design_residue.py  display_labels.py  doctor.py  failure.py  gitmeta.py  guard.py  human_status.py  instruction.py  markdown_parse.py  mcp_identity.py  mcp_server.py  open_state.py  overdrive.py  project_boundary.py  project_language.py  project_logic.py  (+40 more)
tests/: backup_helpers.py  run_cli_group.py  run_shards.py  run_test_durations.py  test_backup.py  test_cli.py  test_cli_git_integration.py  test_completion_projection.py  test_failure_ledger.py  test_failure_patterns.py  test_gitmeta.py  test_guard.py  test_human_status.py  test_mcp_server.py  test_project_boundary.py  test_release_workflow.py  test_review.py  test_review_adapter_boundary.py  test_review_coordinator.py  test_review_dispatcher.py  test_review_errors.py  test_review_lifecycle.py  test_review_service.py  test_schema_inventory.py  test_shard_runner.py  test_shards.py  test_snapshot_policy.py  test_state_audit.py  test_status_surface.py  test_task_analytics.py  test_transitions.py  test_update_check.py  test_upgrade.py  test_verification.py  test_version_advisor.py  test_view_model.py  test_view_server.py  test_work_projection.py  test_work_service.py  test_workflow_decomposition.py  (+1 more)
(+53 files in other folders)
