[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nilo"
version = "0.5.2"
description = "Evidence-based AI development flow guardrail"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Taro Endo" },
]
keywords = ["ai", "agent", "workflow", "mcp", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.scripts]
nilo = "nilo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nilo = ["builtin_recipes/*.recipe.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
