[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nilo"
version = "0.7.7"
description = "Evidence-based AI development flow guardrail"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Taro Endo" },
]
keywords = ["ai", "agent", "workflow", "mcp", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<0.16",
]

[project.scripts]
nilo = "nilo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nilo = ["builtin_recipes/*.recipe.yml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
# CLI handlers are resolved dynamically from this registry by attribute name.
"src/nilo/cli_handlers/registry.py" = ["F401"]
# This compatibility facade intentionally re-exports helpers used by handlers.
"src/nilo/cli.py" = ["E402", "F401"]
# These executable test modules adjust sys.path before importing local packages.
"tests/run_cli_group.py" = ["E402"]
"tests/test_backup.py" = ["E402"]
"tests/test_cli.py" = ["E402"]
"tests/test_cli_git_integration.py" = ["E402"]
"tests/test_task_analytics.py" = ["E402"]
"tests/test_version_advisor.py" = ["E402"]
"tests/test_view_model.py" = ["E402"]
"tests/test_view_server.py" = ["E402"]
